examples/kubeflow/mnist_with_tfjob/kubflowpach/.cache/manifests/manifests-1.0.0/dex-auth/keycloak-gatekeeper/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-gatekeeper
spec:
  type: NodePort
  ports:
    - port: 5554
      protocol: TCP
      name: http
      targetPort: http
      nodePort: 32004
  selector:
    app: keycloak-gatekeeper
